fix image alignment in splide.

--- a/src/sass/integration/_splide.scss
+++ b/src/sass/integration/_splide.scss
@@ -130,7 +130,7 @@
 }
 
 .splide__slide img {
-    vertical-align: bottom
+    vertical-align: middle
 }
 
 .splide__spinner {
